Jann 30/objects/GS1_EAN__c.object
<CustomObject>
    <fields>
        <fullName>Freed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_1__c</fullName>
        <formula>IF (LEN(TRIM(Name))=8, &apos;Short&apos;, IF(LEN(TRIM(Name))=13, &apos;Long&apos;, &apos;Invalid barcode!&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short or Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_2__c</fullName>
        <label>CU/DU or Pallet</label>
        <picklist>
            <picklistValues>
                <fullName>CU/DU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_3__c</fullName>
        <label>Promo or Normal</label>
        <picklist>
            <picklistValues>
                <fullName>Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Free</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Allocated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>GS1 Barcode</label>
    <listViews>
        <fullName>Allocated_Barcodes</fullName>
        <columns>NAME</columns>
        <columns>Property_2__c</columns>
        <columns>Property_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Allocated</value>
        </filters>
        <label>Allocated Barcodes</label>
    </listViews>
    <listViews>
        <fullName>Freed_Barcodes</fullName>
        <columns>NAME</columns>
        <columns>Property_2__c</columns>
        <columns>Property_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Free</value>
        </filters>
        <filters>
            <field>Freed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Freed Barcodes</label>
    </listViews>
    <listViews>
        <fullName>X1_CU_DU_Normal_Long</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_2__c</field>
            <operation>equals</operation>
            <value>CU/DU</value>
        </filters>
        <filters>
            <field>Property_3__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Free</value>
        </filters>
        <filters>
            <field>Property_1__c</field>
            <operation>equals</operation>
            <value>Long</value>
        </filters>
        <label>1 - CU/DU - Normal Long</label>
    </listViews>
    <listViews>
        <fullName>X2_CU_DU_Promo_Long</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_2__c</field>
            <operation>equals</operation>
            <value>CU/DU</value>
        </filters>
        <filters>
            <field>Property_3__c</field>
            <operation>equals</operation>
            <value>Promo</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Free</value>
        </filters>
        <filters>
            <field>Property_1__c</field>
            <operation>equals</operation>
            <value>Long</value>
        </filters>
        <label>2 - CU/DU - Promo Long</label>
    </listViews>
    <listViews>
        <fullName>X3_Pallet_Normal_Long</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_2__c</field>
            <operation>equals</operation>
            <value>Pallet</value>
        </filters>
        <filters>
            <field>Property_3__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Free</value>
        </filters>
        <filters>
            <field>Property_1__c</field>
            <operation>equals</operation>
            <value>Long</value>
        </filters>
        <label>3 - Pallet - Normal Long</label>
    </listViews>
    <listViews>
        <fullName>X4_Pallet_Promo_Long</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_2__c</field>
            <operation>equals</operation>
            <value>Pallet</value>
        </filters>
        <filters>
            <field>Property_3__c</field>
            <operation>equals</operation>
            <value>Promo</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Free</value>
        </filters>
        <filters>
            <field>Property_1__c</field>
            <operation>equals</operation>
            <value>Long</value>
        </filters>
        <label>4 - Pallet - Promo Long</label>
    </listViews>
    <listViews>
        <fullName>X5_CU_DU_Normal_Short</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_2__c</field>
            <operation>equals</operation>
            <value>CU/DU</value>
        </filters>
        <filters>
            <field>Property_3__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Free</value>
        </filters>
        <filters>
            <field>Property_1__c</field>
            <operation>equals</operation>
            <value>Short</value>
        </filters>
        <label>5 - CU/DU - Normal Short</label>
    </listViews>
    <listViews>
        <fullName>X6_CU_DU_Promo_Short</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_2__c</field>
            <operation>equals</operation>
            <value>CU/DU</value>
        </filters>
        <filters>
            <field>Property_3__c</field>
            <operation>equals</operation>
            <value>Promo</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Free</value>
        </filters>
        <filters>
            <field>Property_1__c</field>
            <operation>equals</operation>
            <value>Short</value>
        </filters>
        <label>6 - CU/DU - Promo Short</label>
    </listViews>
    <nameField>
        <label>Barcode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS1 Barcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_all_fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Property_2__c,&quot;&quot;)||
ISPICKVAL(Property_3__c,&quot;&quot;)</errorConditionFormula>
        <errorMessage>All fields are required: Short or Long, CU/DU or Pallet, Promo or No-Promo</errorMessage>
    </validationRules>
</CustomObject>